-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.669 2009-11-29 04:41:36 guru Exp $
-----------------------------------------------------------------------------------------

2009-11-28	pwessel
	* x2sys/x2sys.c:	Now, various lists can contain header records
	* x2sys/x2sys.c:	Added internal book-keeping so we know which
				in AND out columns correspond to x, y, and t.
	* x2sys/x2sys_datalist.c:	Should now get the correct data columns.
	* x2sys/x2sys_get.c:		Added -Q[i|e] to be used with -L.
	* x2sys/x2sys_solve.c:	Added -Z to remove smallest dist/time for -Ed|t

2009-11-26	pwessel
	* grdcontour.c:		1) -Q should only apply to closed contours
				2) -T failed to find inside point for oblique projections.
	* x2sys/x2sys_get.c:	-D now only lists track names

2009-11-24	pwessel
	* gmt_init.c:		Guard against getting a negative hash value (happened
				when text was Russian language codes from ru.d)
2009-11-23	pwessel
	* grdlandmask.c:	Round-off and bug caused missing nodes for -F -Rd

2009-11-16	remko
	* psxyz.c:		Fixed bug in distance sorting (also made much simpler).

2009-11-15	jluis
	* x2sys/x2sys_list.c:	Weights were not written out when names were selected as well,
				as in -Fncw

2009-11-12	pwessel
	* fitcircle.c:		Now, -S optionally takes a latitude instead of finding
				the best-fitting latitude.
	* mgd77/mgd77manage.c:	Add attribute array of TZ corrections for the few cruises
				that stored TZ and local time instead of UTC time.

2009-11-12	remko
	* *.c:			Renamed {Free,New}_Program_Ctrl to {New,Free}_program_Ctrl

2009-11-10	remko
	* gmt_plot.c:		Get dimensions of 3D ellipse right (full, not semi axes)
	* psxy.c:		plot_?_errorbar incorrectly drew tips at plot boundary
				when clipping error bars.

2009-11-09	pwessel
	* x2sys/x2sys_init.c:	Did not accept -m, only old -M

2009-11-08	pwessel
	* gmt_shore.[ch]:	Changes to accommodate new GSHHS2.0.2 netcdf files